# turbo-downloader

./: .gitignore  AGENTS.md  README.md  Tree.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/: CHANGES.md  DECISIONS.md  REVIEW.md
project-docs/: CHANGES.md  DECISIONS.md  ISSUES.md  REVIEW.md
project-docs/plans/: idea-inbox.md  keyword-search-baseurl-fix.md  responsive-keyword-download.md
project-docs/sessions/: 2026-06-07-001.md  2026-06-07-002.md  2026-06-07-003.md  2026-06-07-004.md  2026-06-07-005.md  2026-06-17-001.md  2026-07-11-001.md  2026-07-11-002.md
src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
