[package]
name = "turbo-downloader"
version = "0.1.0"
description = "Turbo Video Downloader Ultra – Tauri Edition"
authors = ["you"]
license = ""
repository = ""
default-run = "turbo-downloader"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "turbo_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "turbo-downloader"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rfd          = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
